@@ -1015,7 +1015,7 @@
       <dependency>
         <groupId>com.github.ben-manes.caffeine</groupId>
         <artifactId>caffeine</artifactId>
-        <version>2.9.2</version>
+        <version>3.1.8</version>
       </dependency>
       <dependency>
         <groupId>org.jctools</groupId>
